Ticket #27410: The height of the expandable and blocktextinput are now aligned with the textareas. Fixed a mistake which came with the core theme ticket. The fotorama and mdtimepicker.css files in the core module are overwriting the files in com.top_logic module which are used for the other themes, hence I renamed the files in the core module to fix this issue.

--- a/com.top_logic.themes.core/src/main/webapp/style/form.css
+++ b/com.top_logic.themes.core/src/main/webapp/style/form.css
@@ -1682,6 +1682,11 @@ span.disabled > span.lFlexible > select:not( [multiple="multiple"] ) {
 	width: 100%;
 }
 
+.cExpandableTextInput .lFlexible,
+.cBlockTextInput .lFlexible {
+	display: inline-flex
+}
+
 /* 		Radio Buttons styles	*/
 /* Resets browser's default radio style. */
 input[type="radio"] {
